Results collection, Project config
Moving cached results into own collection to avoid re-processing every
time DB is bumped
Added project-specific params to config file (first step to
generalising code for all Ouroboros projects)
Flipped SIMBAD y-coord as it seems to be incorrect.
Removed ‘examples’ endpoint which does nothing.

--- a/config/mongo.yml
+++ b/config/mongo.yml
@@ -4,11 +4,11 @@ defaults: &defaults
 
 development:
   <<: *defaults
-  database: milky_way
+  database: ouroboros
 
 test:
   <<: *defaults
-  database: milky_way_test
+  database: milkman_test
 
 # set these environment variables on your prod server
 production:
